# TM-simulator

./: .gitignore  LICENSE  README.md  TMsimulator.py  docs.md  pyproject.toml  syntax.md  tm-simulator.py
TM_simulator/: __init__.py  interface.py  machine.py  main.py  tuples.py
examples/: benchmark.txt  bin-dec.txt  dots.txt  even-odd.txt  int-division.txt  palindrome.txt  reverse.txt
src/: interface.py  machine.py  main.py  tuples.py
