[project]
name = "TM-simulator"
version = "1.3.2"
authors = [{name = "M Trevi"}]
description = "A Turing Machine simulator written in python with a terminal interface"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["keyboard >= 0.13.5"]

[project.scripts]
tm-simulator = "main:main"

[project.urls]
Homepage = "https://github.com/ir-trevi/TM-simulator/"
