[project]
name = "TM-simulator"
version = "1.4.2"
authors = [{name = "M Trevi"}]
description = "A Turing Machine simulator that can be used as a command line tool or imported as a module"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["keyboard >= 0.13.5"]

[tool.setuptools]
packages = ["TM_simulator"]

[project.scripts]
tm-simulator = "TM_simulator.main:main"

[project.urls]
Homepage = "https://github.com/ir-trevi/TM-simulator/"
